force-app/main/default/objects/THOR_Task_List__c.object
<CustomObject>
    <fields>
        <fullName>FL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FL</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Task List</relationshipLabel>
        <relationshipName>Task_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>changeOn__c</fullName>
        <label>changeOn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>groupCount__c</fullName>
        <label>groupCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plannerGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>plannerGroup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>PlannerGroup</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Task List (plannerGroup)</relationshipLabel>
        <relationshipName>Task_List2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Task List (plant)</relationshipLabel>
        <relationshipName>Task_List1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>strategy__c</fullName>
        <label>strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tGroup__c</fullName>
        <label>tGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taskListType__c</fullName>
        <label>taskListType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usage__c</fullName>
        <label>usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workCenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>workCenter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Main Work Center</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Task List</relationshipLabel>
        <relationshipName>Task_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Task List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task List Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>